--- a/Source/AlinSpace.Arguments.Tests/AlinSpace.Arguments.Tests.csproj
+++ b/Source/AlinSpace.Arguments.Tests/AlinSpace.Arguments.Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AlinSpace.FluentArguments\AlinSpace.FluentArguments.csproj" />
+    <ProjectReference Include="..\AlinSpace.Arguments\AlinSpace.Arguments.csproj" />
   </ItemGroup>
 
 </Project>
