--- a/Source/AlinSpace.Arguments/AlinSpace.Arguments.csproj
+++ b/Source/AlinSpace.Arguments/AlinSpace.Arguments.csproj
@@ -1,26 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
     <Authors>Alin Andersen</Authors>
-    <Description>Fluent arguments validation.</Description>
+    <Description>Fluent argument validation.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>fluent, arguments, fluentarguments, fluent arguments</PackageTags>
-    <PackageProjectUrl>https://github.com/onixion/FluentArguments</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/onixion/AlinSpace.Arguments</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/onixion/FluentArguments</RepositoryUrl>
+    <RepositoryUrl>https://github.com/onixion/AlinSpace.Arguments</RepositoryUrl>
     <Copyright>Copyright © 2021 Alin Andersen</Copyright>
-    <PackageIcon>Icon.jpg</PackageIcon>
-    <PackageId>AlinSpace.FluentArguments</PackageId>
-    <AssemblyVersion>1.1.2.0</AssemblyVersion>
-    <FileVersion>1.1.2.0</FileVersion>
-    <Version>1.1.2</Version>
+    <PackageIcon>Icon.png</PackageIcon>
+    <PackageId>AlinSpace.Arguments</PackageId>
+    <AssemblyVersion>5.0.0.0</AssemblyVersion>
+    <FileVersion>5.0.0.0</FileVersion>
+    <Version>5.0.0.0</Version>
+	<LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="Icon.jpg">
+    <None Include="Icon.png">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
