--- a/AlinSpace.Arguments/AlinSpace.Arguments.csproj
+++ b/AlinSpace.Arguments/AlinSpace.Arguments.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net5.0;net6.0</TargetFrameworks>
     <Authors>Alin Andersen</Authors>
     <Description>Fluent argument validation library.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -12,24 +11,10 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/onixion/AlinSpace.Arguments</RepositoryUrl>
     <Copyright>Copyright © 2021 Alin Andersen</Copyright>
-    <PackageIcon>Icon.png</PackageIcon>
     <PackageId>AlinSpace.Arguments</PackageId>
-    <AssemblyVersion>6.0.0</AssemblyVersion>
-    <FileVersion>6.0.0</FileVersion>
-    <Version>6.0.0</Version>
+    <AssemblyVersion>6.0.1</AssemblyVersion>
+    <FileVersion>6.0.1</FileVersion>
+    <Version>6.0.1</Version>
 	<LangVersion>8.0</LangVersion>
-	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Include="..\README.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-    <None Include="Icon.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
-
 </Project>
